test/error/ref_field_not_init.colgm
struct foo {
    bar: i64&
}

func main() -> i32 {
    var f = foo {};

    f.bar = 0;
    return f.bar => i32;
}