test/error/ref_field_not_init.result
Error: struct field "bar" is reference type but not initialized
  --> test/error/ref_field_not_init.colgm:6:17
  | 
6 |     var f = foo {};
  |                 ^^
  --> test/error/ref_field_not_init.colgm:2:5
  | 
2 |     bar: i64&
  |     ^^^^^^^^^
 note: defined here